--- a/Codigo Principal/Cultura.html
+++ b/Codigo Principal/Cultura.html
@@ -12,8 +12,8 @@
         <h1> Cesupa <span style="color: #0099ff;">News</span></h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/02/Bandeira_do_Par%C3%A1.svg/640px-Bandeira_do_Par%C3%A1.svg.png" alt="Ícone do Pará" class="icone-para">
         <nav>
-            <a href="Telainicial.html">Tela Principal</a>
-            <a href="futebol.html">Futebol</a>
+            <a href="TelaInicial.html">Voltar</a>
+            <a href="Futebol.html">Futebol</a>
             <a href="Tecnologia.html">Tecnologia</a>
         </nav>
     </div>
