--- a/Codigo Principal/Cultura.html
+++ b/Codigo Principal/Cultura.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Cultura.css">
-    <title>Jornal</title>
+    <title>Cultura</title>
     
 </head>
 <body>
